clusters/apps/workloads/postgres/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: fleet
    app.kubernetes.io/managed-by: argocd
